--- a/Rust_to_Ada/ada_string_reader/Cargo.toml
+++ b/Rust_to_Ada/ada_string_reader/Cargo.toml
@@ -8,4 +8,5 @@ edition = "2021"
 [dependencies]
 
 [build-dependencies]
-gpr = "0.1.1"
+#gpr = "0.1.1"
+gpr = { git = "https://github.com/jklmnn/gpr-rust", branch = "alire" }
